backport: re PR target/56797 (internal compiler error: in extract_insn, at recog.c:2150)

2013-04-24  Greta Yorsh  <Greta.Yorsh@arm.com>

	Backported from mainline.
	PR target/56797
	* config/arm/arm.c (load_multiple_sequence): Require SP
	as base register for loads if SP is in the register list.

From-SVN: r198220